<?xml version="1.0" encoding="utf-8"?>



<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grad"
        android:orientation="vertical">


        <ImageView
            android:layout_width="219dp"
            android:layout_height="159dp"
            android:layout_gravity="center"
            android:padding="20dp"
            android:src="@mipmap/obey_logo"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/listText"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:fontFamily="@font/poppins_light"
            android:padding="10dp"
            android:text="@string/List"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginVertical="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="186dp"
            android:layout_height="47dp"
            android:layout_margin="5dp"
            android:fontFamily="@font/poppins_light"
            android:padding="10dp"
            android:text="@string/work"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:contentDescription="@string/yeah"
            android:src="@drawable/procedure_img" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="298dp"
            android:layout_height="44dp"
            android:fontFamily="@font/poppins"
            android:layout_margin="5dp"
            android:text="@string/DETAILS"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:autofillHints=""
            android:ems="15"
            android:textColor="@color/black"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPostalAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:autofillHints=""
            android:ems="15"
            android:hint="@string/residence_area"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:ems="15"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="239dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:autofillHints="@string/email"
            android:ems="15"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:layout_marginStart="15dp"
                android:text="@string/gender"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:scaleX="1.0"
                    android:scaleY="1.0"
                    android:text="@string/male"
                    android:translationX="14dp" />
            </LinearLayout>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:scaleX="1.0"
                android:scaleY="1.0"
                android:translationX="14dp"
                android:text="@string/female" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:scaleX="1.0"
                android:scaleY="1.0"
                android:text="@string/transgender"
                android:translationX="14dp" />


        </LinearLayout>


        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginBottom="19dp"
            android:ems="15"
            android:hint="@string/time_to_meet"
            android:inputType="time"
            android:autofillHints="" />

        <Button
            android:id="@+id/submit"
            android:layout_width="333dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/login_button_selector"
            android:padding="10dp"
            android:text="@string/submit"
            android:textColor="@color/background_color" />


    </LinearLayout>
</ScrollView>

