<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="20dp"
        tools:context=".signup">


        <ImageView
            android:id="@+id/user"
            android:layout_width="362dp"
            android:layout_height="121dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:src="@mipmap/obey_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="45sp"
            android:textStyle="bold|italic" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/new_user"
            android:textSize="20sp"
            android:textStyle="bold"

            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/border"
                android:drawableStart="@drawable/user"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/fullname"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginHorizontal="20dp"
            android:background="@color/white_greyish" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@android:color/transparent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/border"
                android:drawableStart="@drawable/email"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginHorizontal="20dp"
            android:background="@color/white_greyish" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userMobileNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@android:color/transparent">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="8dp"
                android:gravity="center|fill_horizontal"
                android:hint="@string/mobile_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginHorizontal="20dp"
            android:background="@color/white_greyish" />


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@android:color/transparent"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:drawableStart="@drawable/password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@android:color/transparent"
            app:errorEnabled="true">


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/confirm_password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />


        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/terms_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/terms_conditions"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <androidx.core.widget.ContentLoadingProgressBar

            android:id="@+id/progress_bar"
            android:layout_width="373dp"
            android:layout_height="28dp"
            android:visibility="visible" />


        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_button_selector"
            android:onClick="forloggedIn"
            android:padding="3dp"
            android:text="@string/signup"
            android:textColor="@color/background_color"
            android:textSize="17sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="367dp"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/already_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/already_user"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/login_button_selector"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="GoToLogin"
                android:padding="5dp"
                android:text="@string/login"
                android:textColor="@color/background_color"
                android:textSize="15sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>