<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:padding="25dp"
    app:layout_constraintStart_toStartOf="parent"
    tools:context=".login">

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="167dp"
        android:layout_height="121dp"
        android:layout_marginHorizontal="10dp"
        android:contentDescription="@string/todo"
        android:padding="5dp"
        android:gravity="center"
        android:src="@mipmap/obey_logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/LoginUserEmail"
        app:layout_constraintEnd_toEndOf="@+id/logo_img"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="@+id/logo_img"
        app:layout_constraintTop_toBottomOf="@+id/logo_img">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:text="@string/welcome_back"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:layout_width="255dp"
            android:layout_height="103dp"
            android:src="@drawable/hiiii"
            android:contentDescription="@string/imgdiscription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:textSize="13sp"
            android:text="@string/signin"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LoginUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/border"
            android:drawableStart="@drawable/email"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="234dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_margin="8dp"
        android:layout_marginBottom="3dp"
        android:background="@color/white_greyish"
        app:layout_constraintBottom_toTopOf="@+id/LoginPassword"
        app:layout_constraintEnd_toEndOf="@+id/LoginUserEmail"
        app:layout_constraintStart_toStartOf="@+id/LoginUserEmail"
        app:layout_constraintTop_toBottomOf="@+id/LoginUserEmail" />


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/LoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/LoginUserEmail"
        app:layout_constraintStart_toStartOf="@+id/LoginUserEmail"
        app:layout_constraintTop_toBottomOf="@+id/LoginUserEmail"
        app:passwordToggleEnabled="true">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/border"
            android:drawableStart="@drawable/password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="25dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/login_button_selector"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/login"
        android:onClick="SignInHere"
        android:textColor="@color/background_color"
        app:layout_constraintEnd_toEndOf="@+id/LoginPassword"
        app:layout_constraintStart_toStartOf="@+id/LoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/LoginPassword" />


    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="83dp"
        android:layout_height="80dp"
        android:progressDrawable="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googlebtn"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login">

    </com.google.android.gms.common.SignInButton>

    <TextView
        android:id="@+id/passwordReset"
        android:layout_width="176dp"
        android:layout_height="37dp"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:shadowColor="@color/colorAccent"
        android:text="@string/forget_password"
        android:textAlignment="textStart"
        android:textColor="@color/background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/googlebtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/googlebtn"
        app:layout_constraintTop_toBottomOf="@+id/googlebtn"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
